tests/compile/command_modules/deferred.stderr
In file included from deferred.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:116:17: error: static assertion failed: command recording has unresolved dependencies
  116 |                 static_assert(false, norm.second);
      |                               ^~~~~
deferred.cpp:176:3: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::NormalEntry<norm_entry{{2, &targets.color, 0}, 2, {{0, 0}, {0, 0}}}>, rcgp::NormalEntry<norm_entry{{4, nullptr, 0}, 3, {{0, 0}, {0, 0}}}>, rcgp::NormalEntry<norm_entry{{2, &targets.screen, 0}, 2, {{0, 0}, {0, 0}}}>, rcgp::NormalEntry<norm_entry{{3, &targets.color, 0}, 1, {{0, 0}, {0, 0}}}>, rcgp::DependencySentinel>' requested here
  176 |                 | draw(3)
      |                 ^
1 error generated.
